k8s/auth/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: auth-container
        image: mrmonster786/rnr-backend-base:latest 
        imagePullPolicy: Always
        args: ["python", "-m", "uvicorn", "src.auth.main:app", "--host", "0.0.0.0", "--port", "8001"]
        ports:
        - containerPort: 8001
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
